[feature #166240996] CRUD article Endpoints Added, API Docs and tests foreach endpoints
