# src/sequelize/models/index.js
@@ -1,25 +1,19 @@
-import fs from 'fs';
-import path from 'path';
-import Sequelize from 'sequelize';
-import dotenv from 'dotenv';
-
-dotenv.config();
+/* eslint-disable import/no-dynamic-require */
+/* eslint-disable template-curly-spacing */
+const fs = require('fs');
+const path = require('path');
+const Sequelize = require('sequelize');
 
 const basename = path.basename(__filename);
 const env = process.env.NODE_ENV || 'development';
-const config = require('../../config/config.js')[env];
-
+const config = require(`${__dirname }/../../config/config.js`)[env];
 const db = {};
 
 let sequelize;
 if (config.use_env_variable) {
   sequelize = new Sequelize(process.env[config.use_env_variable], config);
 } else {
-  sequelize = new Sequelize(config.database, config.username, config.password, {
-    host: config.host,
-    dialect: 'postgres',
-    logging: false,
-  });
+  sequelize = new Sequelize(config.database, config.username, config.password, config);
 }
 
 fs
@@ -39,4 +33,4 @@ Object.keys(db).forEach((modelName) => {
 db.sequelize = sequelize;
 db.Sequelize = Sequelize;
 
-export default db;
+module.exports = db;
